edited cards to show Not Started when progress is at 0. Edited dashboard view all links to navigate user to the correct page. moved searchbar styles for library pages to muiTheme and edited library buttons to use shared button styling in muiTheme. Changed spacing of the searchbar and buttons

--- a/react-app/src/pages/PathwayLibraryPage/PathwayLibraryPage.module.css
+++ b/react-app/src/pages/PathwayLibraryPage/PathwayLibraryPage.module.css
@@ -16,14 +16,13 @@
 
 /* have space between header and view all link  */
 .header {
-  font-size: 1.3em;
+  font-size: 1.3rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-top: 1.5%;
-  margin-bottom: -0.5%;
 }
 
 .nameHeading {
@@ -54,13 +53,18 @@
   justify-content: space-between;
 }
 
+.buttonContainer {
+  display: flex;
+  gap: 20px;
+}
+
 .cardsContainer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  row-gap: 1em;
-  column-gap: 1em;
+  row-gap: 1rem;
+  column-gap: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -76,11 +80,10 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  row-gap: 1em;
-  column-gap: 1em;
+  row-gap: 1rem;
+  column-gap: 1rem;
 }
 
 .subHeader h2 {
-  margin-left: 0;
-  margin-bottom: 1rem;
+  margin: 50px 0px 25px 0px;
 }
